--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,10 @@
     ],
     "browser_action": {
         "default_title": "yaghn",
-        "default_icon": "default.png"
+        "default_icon": {
+            "19": "yaghn-default-19x19.png",
+            "38": "yaghn-default-19x19@2x.png"
+        }
     },
 
     "manifest_version": 2
