--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     },
     "permissions": [
         "alarms",
-        "https://github.com/"
+        "https://github.com/",
+        "tabs"
     ],
     "browser_action": {
         "default_title": "yaghn",
